--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 [
-"Version" : "1.2" . 
-"changelog" : "test lang po" . 
-"Link" : "https://youtube.com/channel/UCKqh8b8T_1eeFRZKQ1a37mQ"
+"version" : "1.2". 
+"changelog" : "test lang po". 
+"link" : "https://youtube.com/channel/UCKqh8b8T_1eeFRZKQ1a37mQ"
 ] 
 ] 
